{
  "version": 4,
  "terraform_version": "1.13.3",
  "serial": 5,
  "lineage": "f7b059d3-f43d-c974-9ad5-61f7ae554884",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0444794b421ec32e4",
            "arn": "arn:aws:ec2:eu-central-1:552537893479:instance/i-039f292ee98fa7a89",
            "associate_public_ip_address": true,
            "availability_zone": "eu-central-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-039f292ee98fa7a89",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-0affd26f41cbf5428"
              }
            ],
            "primary_network_interface_id": "eni-0affd26f41cbf5428",
            "private_dns": "ip-172-31-38-238.eu-central-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.38.238",
            "public_dns": "ec2-63-177-48-205.eu-central-1.compute.amazonaws.com",
            "public_ip": "63.177.48.205",
            "region": "eu-central-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0063303f7a38f2946",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "Allow HTTPS"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-043a1b19872f40482",
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-048cb9c2062da09fc"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "552537893479",
            "id": "i-039f292ee98fa7a89",
            "region": "eu-central-1"
          },
          "dependencies": [
            "aws_security_group.webtraffic"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "webtraffic",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:552537893479:security-group/sg-048cb9c2062da09fc",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-048cb9c2062da09fc",
            "ingress": [],
            "name": "Allow HTTPS",
            "name_prefix": "",
            "owner_id": "552537893479",
            "region": "eu-central-1",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0e5f3560af8e6ce49"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "552537893479",
            "id": "sg-048cb9c2062da09fc",
            "region": "eu-central-1"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "allow_all_traffic_ipv6",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:552537893479:security-group-rule/sgr-0f1a26a4a272c010a",
            "cidr_ipv4": null,
            "cidr_ipv6": "::/0",
            "description": null,
            "from_port": 443,
            "id": "sgr-0f1a26a4a272c010a",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "eu-central-1",
            "security_group_id": "sg-048cb9c2062da09fc",
            "security_group_rule_id": "sgr-0f1a26a4a272c010a",
            "tags": null,
            "tags_all": {},
            "to_port": 443
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "552537893479",
            "id": "sgr-0f1a26a4a272c010a",
            "region": "eu-central-1"
          },
          "dependencies": [
            "aws_security_group.webtraffic"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "allow_all_traffic_ipv6",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:552537893479:security-group-rule/sgr-058572553ffdb602c",
            "cidr_ipv4": null,
            "cidr_ipv6": "::/0",
            "description": null,
            "from_port": 443,
            "id": "sgr-058572553ffdb602c",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "eu-central-1",
            "security_group_id": "sg-048cb9c2062da09fc",
            "security_group_rule_id": "sgr-058572553ffdb602c",
            "tags": null,
            "tags_all": {},
            "to_port": 443
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "552537893479",
            "id": "sgr-058572553ffdb602c",
            "region": "eu-central-1"
          },
          "dependencies": [
            "aws_security_group.webtraffic"
          ]
        }
      ]
    }
  ]
}